--- a/play.html
+++ b/play.html
@@ -32,9 +32,9 @@
         <div class="control">
             <h1 id="escolha"> Escolha: </h1>
             <div id="options" class="options">
-            <div><img src="images/pedra.png" id="pedra" alt="pedra.png"> </div>
-            <div><img src="images/papel.png" id="papel" alt="papel.png"> </div>
-            <div><img src="images/tesoura.png" id="tesoura" alt="tesoura.png"> </div>
+            <div><img src="pedra.png" id="pedra" alt="pedra.png"> </div>
+            <div><img src="papel.png" id="papel" alt="papel.png"> </div>
+            <div><img src="tesoura.png" id="tesoura" alt="tesoura.png"> </div>
             </div>
             <div id="panel" class="result"></div>
             <button>
